--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
     "build-docker": "ng build --base-href / --configuration=production",
     "test": "npm run test:unit:coverage && npm run test:snapshots",
-    "test:unit:ci": "jest --ci",
+    "test:unit:ci": "jest --ci --coverage",
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
     "test:unit:coverage": "jest --coverage",
