--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -70,17 +70,17 @@ jobs:
     needs: test-and-build
 
     steps:
-    - name: Generate JEST tet
+    - name: Generate JEST test report
       uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
       with:
         artifact: test-reports
         name: JEST Tests
-        path: 'jest/report.xml'
+        path: 'reporters/jest/report.xml'
         reporter: jest-junit
     - name: Generate Snapshot test report
       uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
       with:
         artifact: test-reports
         name: Snapshot Tests
-        path: 'playwright/report.xml'
+        path: 'reporters/playwright/report.xml'
         reporter: jest-junit
